--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,37 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#words{
+  margin-left: 80px;
+  width: 1300px;
+  text-align: center;
+  margin-bottom: 60px;
+  margin-top: 50px;
+}
+
+#word-list{
+  text-transform: capitalize;
+  font-weight: 500;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 10px;
+  user-select: all;
+  
+
+}
+
+#button {
+  margin-top: 20px;
+  margin-left: 700px;
+}
+
+#root button, 
+.modal .btn {
+  color: #fff;
+  background-color: #068484;
+  border: 3px solid #068484;
+  font-weight: 600;
+  border-radius: 0;
+  text-transform: capitalize;
+}
