--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,8 @@ code {
 
 #button {
   margin-top: 20px;
-  margin-left: 700px;
+  margin-right: 30px;
+  
 }
 
 #root button, 
@@ -44,4 +45,9 @@ code {
   font-weight: 600;
   border-radius: 0;
   text-transform: capitalize;
+}
+
+#divButton{
+  display: flex;
+  justify-content: center;
 }
