--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ code {
     monospace;
 }
 
-#words{
+#words-div{
   margin-left: 80px;
   width: 1300px;
   text-align: center;
@@ -27,24 +27,17 @@ code {
   padding-right: 20px;
   padding-top: 10px;
   user-select: all;
-  
-
 }
 
-#button {
-  margin-top: 20px;
-  margin-right: 30px;
-  
-}
-
-#root button, 
-.modal .btn {
+#root button {
   color: #fff;
   background-color: #068484;
   border: 3px solid #068484;
   font-weight: 600;
   border-radius: 0;
   text-transform: capitalize;
+  margin-top: 20px;
+  margin-right: 30px;
 }
 
 #divButton{
